# SFMLAnimator

./: CMakeLists.txt
include/: animator.h  game.h
src/: animator.cpp  game.cpp
